changed the pom.xml to meet jdk 17 requirement